[gd_scene load_steps=5 format=3 uid="uid://bkl0igk1rjuid"]

[ext_resource type="Script" uid="uid://bghvbv2do3njb" path="res://src/main/GUI/menu/menu.gd" id="1_5umn5"]
[ext_resource type="FontFile" uid="uid://dti745xfqphoj" path="res://res/fonts/Peaberry-Bold.ttf" id="1_qut8v"]
[ext_resource type="PackedScene" uid="uid://ctwwgpfuy3pul" path="res://src/audio_player/audio_player.tscn" id="3_k6ui8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5umn5"]
bg_color = Color(0.17254902, 0.17254902, 0.17254902, 0.9411765)

[node name="Menu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5umn5")
script = ExtResource("1_5umn5")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_qut8v")
bbcode_enabled = true
text = "[wave][rainbow]<[ GAME PAUSED ]>"
horizontal_alignment = 1
vertical_alignment = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
modulate = Color(1, 1, 1, 0.007843138)
layout_mode = 2
bbcode_enabled = true
text = "cheats supported"
vertical_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 5

[node name="AudioPlayer" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_k6ui8")]
layout_mode = 2
size_flags_horizontal = 1

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_qut8v")
text = "CONTINUE
PLAY"

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_qut8v")
text = "RESTART
GAME"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_qut8v")
text = "RETURN
TO REALITY"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/PanelContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/PanelContainer3/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/PanelContainer3/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_qut8v")
text = "WASD - moving
LMB - shoot
RMB - swap items
Q, E - dash
SHIFT - teleport
C, Z - pickup/drop"
horizontal_alignment = 1

[node name="PanelContainer4" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/PanelContainer4"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/PanelContainer4/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/PanelContainer4/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_qut8v")
text = "After change
settings
you need
restart game"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 5

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
value = 100.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_qut8v")
text = "MUSIC"
horizontal_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/PanelContainer3/MarginContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer/PanelContainer3/MarginContainer/VBoxContainer"]
layout_mode = 2
value = 100.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/PanelContainer3/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_qut8v")
text = "SOUNDS"
horizontal_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="CheckBox" type="CheckButton" parent="MarginContainer/HBoxContainer/VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_qut8v")
text = "RTX OFF"

[node name="PanelContainer4" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/PanelContainer4"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="CheckBox" type="CheckButton" parent="MarginContainer/HBoxContainer/VBoxContainer/PanelContainer4/MarginContainer"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_qut8v")
text = "RESET
GAME ON
RESTART"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/VBoxContainer/PanelContainer2/MarginContainer/CheckBox" to="." method="_on_check_box_toggled"]
